--- a/home.html
+++ b/home.html
@@ -171,3 +171,13 @@
 <button id="modalTriggerBtn" style="display: none;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     AUTO LAUNCH MODAL - DO NOT REMOVE
 </button>
+
+<!-- SCRIPTS -->
+<!-- jQuery and Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="./Scripts/remainingdays.js"></script>
+<script src="./Scripts/showmodal.js"></script>
+
+</body>
+</html>
